# echo-core

./: .gitignore  CMakeLists.txt  HANDOFF.md  Qwen3.5-4B-Uncensored-HauhauCS-Aggressive-Q8_0_tensor_analysis.txt  Qwen3.5_Tensor_Analysis_Report.txt  README.md  analyze_gguf.py  in-memoria.db  patch.diff  qwen3.5-full-research.md
docs/superpowers/plans/: 2026-03-22-engine-5x-speedup.md  2026-03-22-fused-dequant-matvec-fix.md  2026-03-31-qwen35-hybrid-operator-plan.md  2026-03-31-raw-quantized-weight-storage.md
docs/superpowers/specs/: 2026-03-22-cpp-to-zig-conversion-design.md  2026-03-31-qwen35-linear-operator-contract.md  2026-03-31-qwen35-verification-matrix.md
echo-core-zig/: build.zig  in-memoria.db
echo-core-zig/src/: gguf_tests.zig  inference_tests.zig  kernel_tests.zig  kv_cache_tests.zig  main.zig  tokenizer_tests.zig
echo-core-zig/src/core/: config.zig  math.zig  memory.zig  types.zig
echo-core-zig/src/data/: arraylist.zig  hashmap.zig  string.zig
echo-core-zig/src/gguf/: reader.zig
echo-core-zig/src/inference/: engine.zig
echo-core-zig/src/kernels/: iq2_tables.zig  matvec.zig  quant.zig  qwen_linear.zig  ssm.zig
echo-core-zig/src/kv_cache/: cache.zig
echo-core-zig/src/ports/: inference.zig  inference_fixed.zig
echo-core-zig/src/tokenizer/: tokenizer.zig
echo-core-zig/tools/: run_bench_matrix.py
include/: config.h  gguf_reader.h  inference.h  kv_cache.h  memory.h  tokenizer.h  types.h
include/kernels/: matvec.h  quant.h
src/: gguf_reader.cpp  inference.cpp  kv_cache.cpp  main.cpp  tokenizer.cpp
src/kernels/: matvec.cpp  quant.cpp
(+5 files in other folders)
